--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     .hero {
       padding: 60px 20px;
       text-align: center;
-      /* Replace 'hero-bg.jpg' with your background image if desired */
+      /* Replace 'hero-bg.jpg' with your actual background image if desired */
       background: url('hero-bg.jpg') no-repeat center center/cover;
       color: #fff;
     }
@@ -152,7 +152,7 @@
 <body>
   <!-- Header with Logo -->
   <header>
-    <!-- Replace 'your-logo.png' with your actual logo file -->
+    <!-- Update this path if your logo is stored in a different folder -->
     <img src="your-logo.png" alt="Your Tool Logo">
   </header>
 
@@ -184,7 +184,7 @@
     <p>
       Just tell us which image to include and the text to display. In one click, get 5 stunning, custom designs—no fiddling required.
     </p>
-    <!-- Placeholder design images; replace these with your actual design previews if available -->
+    <!-- Placeholder design images; update these paths if your design images are stored elsewhere -->
     <div class="design-showcase">
       <div class="design">
         <img src="design1.jpg" alt="Design Option 1">
@@ -208,12 +208,12 @@
   <section class="social-proof">
     <h2>Trusted by Designers & Creators</h2>
     <p>Join thousands who have reclaimed their time and creativity with our tool.</p>
-    <!-- Social Media Icons; replace these image file names with your actual icons -->
+    <!-- Social Media Icons updated to point to the assets/icons/ folder -->
     <p>
-      <img src="facebook-icon.png" alt="Facebook" width="30">
-      <img src="instagram-icon.png" alt="Instagram" width="30">
-      <img src="tiktok-icon.png" alt="TikTok" width="30">
-      <img src="youtube-icon.png" alt="YouTube" width="30">
+      <img src="assets/icons/Facebook.png" alt="Facebook" width="30">
+      <img src="assets/icons/Instagram.png" alt="Instagram" width="30">
+      <img src="assets/icons/TikTok.png" alt="TikTok" width="30">
+      <img src="assets/icons/YouTube.png" alt="YouTube" width="30">
     </p>
   </section>
 
