--- a/tool.html
+++ b/tool.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Select Your Social Media Platform - Picctra</title>
+  <title>Select Platform - Picctra</title>
+  <!-- Link to the PWA manifest -->
   <link rel="manifest" href="manifest.json">
+  <!-- Link to the external CSS -->
   <link rel="stylesheet" href="styles.css">
+  <!-- Google Fonts for modern typography -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -16,60 +19,59 @@
       <a href="subscription.html">About</a>
     </nav>
   </header>
-
+  
   <section class="tool-selection">
     <h1>Select Your Social Media Platform</h1>
     <p>Choose the context for your design by clicking on an icon below.</p>
     <div class="icon-grid">
-      <!-- Each icon links to the upload page -->
-      <a href="upload.html" class="platform">
-        <img src="assets/icons/Facebook.png" alt="Facebook">
+      <a href="upload.html?platform=Facebook" class="platform">
+        <img src="assets/icons/Facebook.png" alt="Facebook" width="128" height="128">
       </a>
-      <a href="upload.html" class="platform">
-        <img src="assets/icons/FacebookMessenger.png" alt="Facebook Messenger">
+      <a href="upload.html?platform=FacebookMessenger" class="platform">
+        <img src="assets/icons/FacebookMessenger.png" alt="Facebook Messenger" width="128" height="128">
       </a>
-      <a href="upload.html" class="platform">
-        <img src="assets/icons/Instagram.png" alt="Instagram">
+      <a href="upload.html?platform=Instagram" class="platform">
+        <img src="assets/icons/Instagram.png" alt="Instagram" width="128" height="128">
       </a>
-      <a href="upload.html" class="platform">
-        <img src="assets/icons/LinkedIn.png" alt="LinkedIn">
+      <a href="upload.html?platform=LinkedIn" class="platform">
+        <img src="assets/icons/LinkedIn.png" alt="LinkedIn" width="128" height="128">
       </a>
-      <a href="upload.html" class="platform">
-        <img src="assets/icons/Pinterest.png" alt="Pinterest">
+      <a href="upload.html?platform=Pinterest" class="platform">
+        <img src="assets/icons/Pinterest.png" alt="Pinterest" width="128" height="128">
       </a>
-      <a href="upload.html" class="platform">
-        <img src="assets/icons/Reddit.png" alt="Reddit">
+      <a href="upload.html?platform=Reddit" class="platform">
+        <img src="assets/icons/Reddit.png" alt="Reddit" width="128" height="128">
       </a>
-      <a href="upload.html" class="platform">
-        <img src="assets/icons/Snapchat.png" alt="Snapchat">
+      <a href="upload.html?platform=Snapchat" class="platform">
+        <img src="assets/icons/Snapchat.png" alt="Snapchat" width="128" height="128">
       </a>
-      <a href="upload.html" class="platform">
-        <img src="assets/icons/Telegram.png" alt="Telegram">
+      <a href="upload.html?platform=Telegram" class="platform">
+        <img src="assets/icons/Telegram.png" alt="Telegram" width="128" height="128">
       </a>
-      <a href="upload.html" class="platform">
-        <img src="assets/icons/TikTok.png" alt="TikTok">
+      <a href="upload.html?platform=TikTok" class="platform">
+        <img src="assets/icons/TikTok.png" alt="TikTok" width="128" height="128">
       </a>
-      <a href="upload.html" class="platform">
-        <img src="assets/icons/Twitch.png" alt="Twitch">
+      <a href="upload.html?platform=Twitch" class="platform">
+        <img src="assets/icons/Twitch.png" alt="Twitch" width="128" height="128">
       </a>
-      <a href="upload.html" class="platform">
-        <img src="assets/icons/WeChat.png" alt="WeChat">
+      <a href="upload.html?platform=WeChat" class="platform">
+        <img src="assets/icons/WeChat.png" alt="WeChat" width="128" height="128">
       </a>
-      <a href="upload.html" class="platform">
-        <img src="assets/icons/WhatsApp.png" alt="WhatsApp">
+      <a href="upload.html?platform=WhatsApp" class="platform">
+        <img src="assets/icons/WhatsApp.png" alt="WhatsApp" width="128" height="128">
       </a>
-      <a href="upload.html" class="platform">
-        <img src="assets/icons/X.png" alt="X (Twitter)">
+      <a href="upload.html?platform=X" class="platform">
+        <img src="assets/icons/X.png" alt="X (Twitter)" width="128" height="128">
       </a>
-      <a href="upload.html" class="platform">
-        <img src="assets/icons/YouTube.png" alt="YouTube">
+      <a href="upload.html?platform=YouTube" class="platform">
+        <img src="assets/icons/YouTube.png" alt="YouTube" width="128" height="128">
       </a>
-      <a href="upload.html" class="platform">
-        <img src="assets/icons/Discord.png" alt="Discord">
+      <a href="upload.html?platform=Discord" class="platform">
+        <img src="assets/icons/Discord.png" alt="Discord" width="128" height="128">
       </a>
     </div>
   </section>
-
+  
   <footer>
     <p>&copy; 2025 Picctra. All Rights Reserved.</p>
     <p>
