--- a/subscription.html
+++ b/subscription.html
@@ -16,26 +16,30 @@
       <a href="upload.html" class="cta-button">Try It Now</a>
     </nav>
   </header>
-
+  
   <section class="subscription-section">
     <h1>About Us & Subscribe</h1>
     <p>Learn more about Picctra and join our community for updates and exclusive offers.</p>
     
     <section class="about">
       <h2>About Picctra</h2>
-      <p>Our mission is to simplify design. With our one‑click solution, you can instantly generate 5 custom designs tailored for social media, thumbnails, and more. Perfect for college students and the new generation, Picctra is modern, intuitive, and always ready when creativity strikes.</p>
+      <p>
+        Our mission is to simplify design. With our one‑click solution, you can instantly generate 5 custom designs tailored for social media, thumbnails, and more. Perfect for college students and the new generation, Picctra is modern, intuitive, and always ready when creativity strikes.
+      </p>
     </section>
     
     <section class="subscribe">
       <h2>Subscribe for Updates</h2>
-      <p>Join our community to receive the latest updates, tips, and exclusive offers. We promise a clutter‑free inbox.</p>
+      <p>
+        Join our community to receive the latest updates, tips, and exclusive offers. We promise a clutter‑free inbox.
+      </p>
       <form action="thankyou.html" method="post" class="subscription-form">
         <input type="email" name="email" placeholder="Enter your email address" required>
         <button type="submit" class="cta-button">Subscribe Now</button>
       </form>
     </section>
   </section>
-
+  
   <footer>
     <p>&copy; 2025 Picctra. All Rights Reserved.</p>
     <p>
