--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
   <section class="hero">
     <div class="hero-content">
-      <h1>Transform Your Designs in a Click</h1>
-      <p>Instantly generate custom designs for social media, thumbnails, and more. Fast, modern, and tailored for you.</p>
+      <h1>Everyone’s upgrading their look</h1>
+      <p>Don’t get left out of the revolution that’s turning heads on TikTok and Instagram.</p>
       <a href="tool.html" class="cta-button">Get Started</a>
     </div>
   </section>
