--- a/tool.html
+++ b/tool.html
@@ -18,8 +18,7 @@
   </header>
   
   <section class="tool-selection">
-    <h1>Select Your Social Media Platform</h1>
-    <p>Choose the context for your design by clicking on an icon below.</p>
+    <h1>Pick a platform and shine.</h1>
     <div class="icon-grid">
       <a href="upload.html?platform=Facebook" class="platform">
         <img src="assets/icons/Facebook.png" alt="Facebook" width="128" height="128">
